[package]
name = "mdbook-docslab"
description = "mdBook preprocessor for interactive code with docslab"
repository = "https://github.com/rerobots/docslab"
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
mdbook = "0.4.37"
pulldown-cmark = "0.12.2"
serde_json = "1.0.135"
toml_edit = "0.22.22"
