[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-docslab"
description = "MkDocs plugin for interactive code"
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "mkdocs",
]
authors = [{name = "rerobots, Inc.", email = "q@rerobots.net"}]
license = {text = "Apache-2.0"}
readme = "README.rst"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
]

[project.urls]
source = "https://github.com/rerobots/docslab"

[project.entry-points."mkdocs.plugins"]
docslab = "mkdocs_docslab:DocslabPlugin"

[tool.setuptools]
packages = ["mkdocs_docslab"]
